fix to modules list

--- a/src/Presentation/WebAdmin/Modules/Packaging/VirtoCommerce.PackagingModule.Web/Scripts/blades/modules-list.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Packaging/VirtoCommerce.PackagingModule.Web/Scripts/blades/modules-list.tpl.html
@@ -20,7 +20,7 @@
                                     <i class="table-ico fa fa-image" ng-if="!data.iconUrl"></i>
                                 </div>
                             </td>
-                            <td class="table-col __product-name">
+                            <td class="table-col">
                                 <span title="{{data.title}}">{{data.title}}</span>
                                 <span title="{{data.description}}" class="blade-sw-title" style="overflow: hidden; text-overflow: ellipsis;">{{data.description}}</span>
                             </td>
