Fixes: 1. Fixe notification UI 2. Collapse blade height 3. Fix pagination for tables list 4. Fix modules tables

--- a/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Scripts/common/navigation/blade/bladeContainer.tpl.html
+++ b/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Scripts/common/navigation/blade/bladeContainer.tpl.html
@@ -1,4 +1,4 @@
-﻿<div class="blade" ng-repeat='blade in blades' ng-class="{'gray': blade.style}">
+﻿<div class="blade" ng-repeat="blade in blades">
     <div class="blade-wrapper" va-blade='blade'>
         <header class="blade-head">
             <div class="blade-status">
