--- a/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Scripts/common/notification/blade/historyDefault.tpl.html
+++ b/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Scripts/common/notification/blade/historyDefault.tpl.html
@@ -1,12 +1,10 @@
-<td class="col">
-    <span class="pic">
-        <i ng-class="(notification.notifyType=='info')?'icon-comments':'icon-warning'" class="icon"></i>
-    </span>
+<td class="table-col">
+    <i ng-class="(notification.notifyType=='info') ? 'fa-comments' : 'fa-warning'" class="table-ico fa"></i>
 </td>
-<td class="col">
-    <span class="title" ng-bind="notification.title+((notification.repeatCount)?' ('+(notification.repeatCount+1) + ')':'')"></span>
-    <span class="desc" ng-bind="notification.description"></span>
+<td class="table-col">
+    <span class="table-t" ng-bind="notification.title+((notification.repeatCount)?' ('+(notification.repeatCount+1) + ')':'')"></span>
+    <span class="table-descr" ng-bind="notification.description"></span>
 </td>
-<td class="col">
-    <span class="date" am-time-ago="notification.created"></span>
+<td class="table-col __date">
+    <span class="table-date" am-time-ago="notification.created"></span>
 </td>
