--- a/src/Presentation/WebAdmin/Design/refactoring/index.html
+++ b/src/Presentation/WebAdmin/Design/refactoring/index.html
@@ -2172,6 +2172,87 @@
                             </div>
                         </div>
                     </div>
+                    <div class="blade">
+                        <header class="blade-head">
+                            <div class="blade-status"></div>
+                            <div class="blade-nav">
+                                <ul class="menu __inline">
+                                    <li class="menu-item __minimize">
+                                        Minimize
+                                    </li>
+                                    <li class="menu-item __maximize">
+                                        Maximize
+                                    </li>
+                                    <li class="menu-item __close">
+                                        Close
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="blade-t __secondary">
+                                <i class="blade-t_ico fa fa-map-marker"></i>
+                                <p class="blade-t_head">Sony</p>
+                                <p class="blade-t_subhead">Edit catalog</p>
+                            </div>
+                            <div class="blade-toolbar">
+                                <ul class="menu __inline">
+                                    <li class="menu-item">
+                                        <a class="menu-btn">
+                                            <i class="menu-ico fa fa-save"></i>
+                                            Save
+                                        </a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a class="menu-btn">
+                                            <i class="menu-ico fa fa-undo"></i>
+                                            Reset
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </header>
+                        <div class="blade-container">
+                            <div class="blade-content __gray">
+                                <div class="blade-inner">
+                                    <div class="inner-block">
+                                        <form class="form">
+                                            <div class="form-group">
+                                                <label class="form-label">Catalog name</label>
+                                                <div class="form-input">
+                                                    <input type="text" value="">
+                                                </div>
+                                            </div>
+                                        </form>
+                                        <ul class="list __items">
+                                            <li class="list-item">
+                                                <i class="list-ico fa fa-language"></i>
+                                                <span class="list-t">Default language</span>
+                                                <span class="list-descr">English (United States) (en-us)</span>
+                                            </li>
+                                            <li class="list-item">
+                                                <i class="list-ico fa fa-language"></i>
+                                                <span class="list-t">Catalog languages</span>
+                                                <span class="list-descr">
+                                                    <a>
+                                                        English (United States) (en-us),
+                                                    </a>
+                                                </span>
+                                            </li>
+                                        </ul>
+                                        <div class="tile-group three">
+                                            <div class="tile double wide">
+                                                <span class="tile-count">5</span>
+                                                <span class="tile-descr">Properties</span>
+                                            </div>
+                                            <div class="tile">
+                                                <span class="tile-count">5</span>
+                                                <span class="tile-descr">Properties</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </article>
         </div>
