-ADD Catalog.  Catalog property support

--- a/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/catalog-property-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/catalog-property-detail.tpl.html
@@ -1,6 +1,6 @@
 ﻿<div class="blade-content">
     <div class="blade-inner">
-        <div class="inner-block" ng-init="propGroups = [{title:'Category properties', type: 'Category'}, {title:'Product properties', type: 'Product'}, {title:'Variation properties', type:'Variation'}]">
+        <div class="inner-block" ng-init="propGroups = [{title:'Catalog properties', type:'Catalog'}, {title:'Category properties', type:'Category'}, {title:'Product properties', type:'Product'}, {title:'Variation properties', type:'Variation'}]">
             <form name="contextEntityDetailForm" class="form">
                 <fieldset ng-repeat="propGroup in propGroups" ng-init="setForm(contextEntityDetailForm);">
                     <legend>
