--- a/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/item-detail-toolbar.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/item-detail-toolbar.tpl.html
@@ -1,4 +1,4 @@
-﻿<div class="blade-switch">
+﻿<!--<div class="blade-switch">
     <span class="switch-t">Primary</span>
     <div class="form-control __switch">
         <label class="form-label">
@@ -6,4 +6,4 @@
             <span class="switch"></span>
         </label>
     </div>
-</div>
+</div>-->
