--- a/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/catalog-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/catalog-detail.tpl.html
@@ -9,7 +9,7 @@
 			        </div>
 			    </div>
 			</form>
-			<va-widget-container group="catalogLanguages" blade="blade"></va-widget-container>
+            <va-widget-container group="catalogDetail" blade="blade"></va-widget-container>
 		</div>
 	</div>
 </div>
