--- a/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/widgets/itemPropertyWidget.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/widgets/itemPropertyWidget.tpl.html
@@ -1,4 +1,4 @@
 ﻿<div class="tile double wide" ng-click="openItemPropertyBlade()">
-    <span class="tile-count">{{currentBlade.item.properties.length}}</span>
+    <span class="tile-count">{{propertiesCount}}</span>
     <span class="tile-descr">Properties</span>
 </div>
