--- a/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/blades/customerOrder-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/blades/customerOrder-detail.tpl.html
@@ -1,7 +1,7 @@
-﻿<div class="blade-content blade-medium">
+﻿<div class="blade-content __medium-wide">
     <div class="blade-inner">
         <div class="inner-block">
-            <div class="block">
+            <div class="form columns clearfix">
                 <div class="column">
                     <div class="form-group">
                         <label class="form-label">Customer order number</label>
@@ -10,7 +10,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label>Status</label>
+                        <label class="form-label">Status</label>
                         <div class="form-input">
                             <!--ng-options="x for x in types"-->
                             <select ng-model="blade.currentEntity.statusId" class="chosen-select">
@@ -31,7 +31,7 @@
                     <div class="form-group">
                         <label class="form-label">from</label>
                         <div class="form-input">
-                            {{blade.currentEntity.createdDate | date:'short'}}
+                            <div class="form-text">{{blade.currentEntity.createdDate | date:'short'}}</div>
                         </div>
                     </div>
                     <div class="form-group">
@@ -53,26 +53,30 @@
                 </div>
             </div>
             <div class="sub-t">Custom attributes</div>
-            <div class="column">
-                <div class="form-group">
-                    <label class="form-label">Custom string field</label>
-                    <div class="form-input">
-                        <input type="text">
+            <div class="form columns clearfix">
+                <div class="column">
+                    <div class="form-group">
+                        <label class="form-label">Custom string field</label>
+                        <div class="form-input">
+                            <input type="text">
+                        </div>
                     </div>
-                    <div class="form-control __checkbox">
-                        <label class="form-label">
-                            <input type="checkbox" name="r1">
-                            <span class="check"></span>
-                            <span class="name">Custom flag field</span>
-                        </label>
+                    <div class="form-group">
+                        <div class="form-control __checkbox">
+                            <label class="form-label">
+                                <input type="checkbox" name="r1">
+                                <span class="check"></span>
+                                <span class="name">Custom flag field</span>
+                            </label>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="column">
-                <div class="form-group">
-                    <label class="form-label">Custom text field</label>
-                    <div class="form-input">
-                        <textarea></textarea>
+                <div class="column">
+                    <div class="form-group">
+                        <label class="form-label">Custom text field</label>
+                        <div class="form-input">
+                            <textarea></textarea>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -83,21 +87,39 @@
                         <li class="tree-item first">
                             <div class="tree-block">
                                 <div class="inner">
-                                    <span class="tree-el title">{{blade.currentEntity.operationType +' #'+blade.currentEntity.number}}</span>
-                                    <span class="tree-el date">{{blade.currentEntity.createdDate | date}}</span>
-                                    <span class="tree-el price">{{blade.currentEntity.sum +' '+blade.currentEntity.currency}}</span>
+                                    <div class="tree-el __title">
+                                        <i class="tree-ico fa fa-info-circle"></i>
+                                        {{blade.currentEntity.operationType +' #'+blade.currentEntity.number}}
+                                    </div>
+                                    <div class="tree-el __date">
+                                        <i class="tree-ico fa fa-calendar"></i>
+                                        {{blade.currentEntity.createdDate | date}}
+                                    </div>
+                                    <div class="tree-el __price">
+                                        <i class="tree-ico fa fa-money"></i>
+                                        {{blade.currentEntity.sum +' '+blade.currentEntity.currency}}
+                                    </div>
                                 </div>
                             </div>
                             <ul class="tree-node" ng-if="(children = (blade.currentEntity.childrenOperations | filter: {parentOperationId: blade.currentEntity.id})).length>0">
-                                <li class="tree-item" ng-class="{'last':$last}" ng-repeat="data in children" ng-include="'document.html'"></li>
+                                <li class="tree-item" ng-repeat="data in children" ng-include="'document.html'"></li>
                             </ul>
                         </li>
                         <script type="text/ng-template" id="document.html">
                             <div class="tree-block">
                                 <div class="inner">
-                                    <span class="tree-el title">{{data.operationType +' #'+data.number}}</span>
-                                    <span class="tree-el date">{{data.createdDate | date}}</span>
-                                    <span class="tree-el price">{{data.sum +' '+data.currency}}</span>
+                                    <div class="tree-el __title">
+                                        <i class="tree-ico fa fa-info-circle"></i>
+                                        {{data.operationType +' #'+data.number}}
+                                    </div>
+                                    <div class="tree-el __date">
+                                        <i class="tree-ico fa fa-calendar"></i>
+                                        {{data.createdDate | date}}
+                                    </div>
+                                    <div class="tree-el __price">
+                                        <i class="tree-ico fa fa-money"></i>
+                                        {{data.sum +' '+data.currency}}
+                                    </div>
                                 </div>
                             </div>
                             <ul class="tree-node" ng-if="(children = (blade.currentEntity.childrenOperations | filter: {parentOperationId: data.id})).length>0">
