--- a/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/blades/customerOrder-items.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/blades/customerOrder-items.tpl.html
@@ -3,7 +3,7 @@
         <p class="form-count">Count: <span class="count">{{pageSettings.totalItems}}</span></p>
     </div>
 </div>
-<div class="blade-content __medium-wide">
+<div class="blade-content __large-wide">
     <div class="blade-inner">
         <div class="inner-block">
             <div class="table-wrapper">
@@ -28,29 +28,33 @@
                     </thead>
                     <tbody>
                         <tr class="table-item" ng-repeat="data in blade.currentEntity.items" ng-class="{'selected': data.id === selectedNodeId}" context-menu data-target="col_menu_{{data.id}}">
-                            <td class="table-col">
+                            <td class="table-col __product-control">
                                 <label class="form-control __checkbox">
                                     <input type="checkbox" ng-model="data.selected">
                                     <span class="check"></span>
                                 </label>
                             </td>
-                            <td class="table-col" ng-click='selectItem(data)' class="product-name">
+                            <td class="table-col __proudct-img" ng-click='selectItem(data)'>
                                 <div class="product-img">
                                     <div class="image" style="background-image: url({{data.imageUrl}})" ng-if="data.imageUrl"></div>
-                                    <i class="fa fa-ban" ng-if="!data.imageUrl" />
+                                    <i class="table-ico fa fa-image" ng-if="!data.imageUrl" />
                                 </div>
                                 <span title="{{data.name}}">{{data.name}}</span>
-                                <ul role="menu" class="dropdown-menu context-menu" id="col_menu_{{data.id}}">
-                                    <li ng-click='edit(data)'>
-                                        <i class="ico fa fa-edit"></i>&nbsp;Manage
+                                <ul role="menu" class="menu __context" id="col_menu_{{data.id}}">
+                                    <li class="menu-item" ng-click='edit(data)'>
+                                        <i class="menu-ico fa fa-edit"></i> Manage
                                     </li>
-                                    <li ng-click='delete()'>
-                                        <i class="ico fa fa-trash-o"></i>&nbsp;Delete
+                                    <li class="menu-item" ng-click='delete()'>
+                                        <i class="menu-ico fa fa-trash-o"></i> Delete
                                     </li>
                                 </ul>
                             </td>
                             <td class="table-col" ng-click='selectItem(data)'>
-                                <input required class="form-control tight-input" ng-model="data.quantity" type="number" step="1" min="1">
+                                <div class="form-input __number js-number-input-plugin" data-step="1">
+                                    <input class="js-val" required class="form-control tight-input" ng-model="data.quantity" type="text">
+                                    <a class="up js-up"></a>
+                                    <a class="down js-down"></a>
+                                </div>
                             </td>
                             <td class="table-col" ng-click='selectItem(data)'>
                                 <span>{{data.avail?data.avail:0}}</span>
@@ -59,22 +63,22 @@
                                 <span>{{data.await?data.await:0}}</span>
                             </td>
                             <td class="table-col" ng-click='selectItem(data)'>
-                                <div class="form-input __number js-number-input-plugin">
-                                    <input class="js-val" required ng-model="data.price" type="number">
+                                <div class="form-input __number js-number-input-plugin" data-step="1">
+                                    <input class="js-val" required ng-model="data.price" type="text">
                                     <a class="up js-up"></a>
                                     <a class="down js-down"></a>
                                 </div>
                             </td>
                             <td class="table-col" ng-click='selectItem(data)'>
                                 <div class="form-input __number js-number-input-plugin" data-step="1">
-                                    <input class="js-val" required ng-model="data.staticDiscount" type="number">
+                                    <input class="js-val" required ng-model="data.staticDiscount" type="text">
                                     <a class="up js-up"></a>
                                     <a class="down js-down"></a>
                                 </div>
                             </td>
                             <td class="table-col" ng-click='selectItem(data)'>
                                 <div class="form-input __number js-number-input-plugin" data-step="1">
-                                    <input class="js-val" required ng-model="data.tax" type="number">
+                                    <input class="js-val" required ng-model="data.tax" type="text">
                                     <a class="up js-up"></a>
                                     <a class="down js-down"></a>
                                 </div>
@@ -85,47 +89,47 @@
                             </td>
                         </tr>
                     </tbody>
-                    <tfoot ng-if="pageSettings.itemsPerPageCount < pageSettings.totalItems">
-                        <tr>
-                            <td colspan="9" ng-include="'pagerTemplate.html'"></td>
-                        </tr>
-                    </tfoot>
                 </table>
             </div>
-            <div class="order-info">
-                <div class="column col-50">
-                    <label>Comment</label>
-                    <div class="input-control textarea">
-                        <textarea></textarea>
+            <div class="pagination" ng-if="pageSettings.itemsPerPageCount < pageSettings.totalItems" ng-include="'pagerTemplate.html'"></div>
+            <div class="columns clearfix">
+                <div class="column">
+                    <div class="form-group">
+                        <label class="form-label">Comment</label>
+                        <div class="form-input">
+                            <textarea></textarea>
+                        </div>
                     </div>
                 </div>
-                <div class="column col-50">
+                <div class="column">
                     <div class="table-wrapper">
                         <table class="table">
-                            <tr>
-                                <td>Total:</td>
-                                <td>{{blade.currentEntity.sum}}</td>
+                            <tr class="table-item">
+                                <td class="table-col">Total:</td>
+                                <td class="table-col">{{blade.currentEntity.sum}}</td>
                             </tr>
-                            <tr>
-                                <td>Sub Total</td>
-                                <td>678.23</td>
+                            <tr class="table-item">
+                                <td class="table-col">Sub Total</td>
+                                <td class="table-col">678.23</td>
                             </tr>
-                            <tr>
-                                <td>Discount Total</td>
-                                <td>36.00</td>
+                            <tr class="table-item">
+                                <td class="table-col">Discount Total</td>
+                                <td class="table-col">36.00</td>
                             </tr>
-                            <tr>
-                                <td>Tax Total</td>
-                                <td>{{blade.currentEntity.tax}}</td>
+                            <tr class="table-item">
+                                <td class="table-col">Tax Total</td>
+                                <td class="table-col">{{blade.currentEntity.tax}}</td>
                             </tr>
                         </table>
                     </div>
-                    <div class="order-currency">
-                        <label>Currency:</label>
-                        <select ng-model="blade.currentEntity.currency" class="chosen-select">
-                            <option value="EUR">EUR</option>
-                            <option value="USD">USD</option>
-                        </select>
+                    <div class="form-group __order-currency">
+                        <label class="form-label">Currency:</label>
+                        <div class="form-input">
+                            <select ng-model="blade.currentEntity.currency" class="chosen-select">
+                                <option value="EUR">EUR</option>
+                                <option value="USD">USD</option>
+                            </select>
+                        </div>
                     </div>
                 </div>
             </div>
