Fixes + add loading progress is all blades {status: isLoading}

--- a/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/category-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/category-detail.tpl.html
@@ -3,7 +3,7 @@
 		<div class="inner-block">
 			<form name="contextEntityDetailForm" class="form">
 			    <fieldset ng-init="setForm(contextEntityDetailForm);">
-                    <div class="fomr-group">
+                    <div class="form-group">
                     	<label class="form-label">Name:</label>
 	                    <div class="form-input">
 	                        <input focus-on="" required class="form-control" ng-model="blade.currentEntity.name" placeholder="Enter category name" />
