--- a/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/wizards/newCategory/category-wizard.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/wizards/newCategory/category-wizard.tpl.html
@@ -2,8 +2,8 @@
 <div class="blade-content">
     <div class="blade-inner">
         <div class="inner-block">
-            <form class="form" name="contextEntityDetailForm" ng-init="setForm(contextEntityDetailForm);">
-                <div class="form-group">
+            <form class="form" name="contextEntityDetailForm" >
+                <div class="form-group" ng-init="setForm(contextEntityDetailForm)">
                     <label class="form-label">Name:</label>
                     <div class="form-input">
                         <input focus-on="" required class="form-control" ng-model="blade.currentEntity.name" placeholder="Enter category name" />
