--- a/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/item-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/item-detail.tpl.html
@@ -1,8 +1,8 @@
 ﻿<div class="blade-content __medium-wide __gray">
     <div class="blade-inner">
         <div class="inner-block">
-            <form name="itemDetailForm" class="form" ng-init="setForm(itemDetailForm);">
-                <div class="form-group">
+            <form name="itemDetailForm" class="form">
+                <div class="form-group" ng-init="setForm(itemDetailForm)">
                     <label class="form-label">SKU:</label>
                     <div class="form-input">
                         <input required class="form-control" ng-model="currentBlade.item.code" placeholder="Enter item sku" />
