--- a/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/wizards/newAssociation/association-wizard-group-new.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/wizards/newAssociation/association-wizard-group-new.tpl.html
@@ -2,13 +2,13 @@
 <div class="blade-content">
 	<div class="blade-inner">
 		<div class="inner-block">
-			<form name="contextEntityDetailForm" class="form" ng-init="setForm(contextEntityDetailForm)">
-			    <div class="form-group">
-			    	<label class="form-label">Name</label>
-				    <div class="form-input">
-				        <input type="text" ng-model="blade.name" required>
-				    </div>
-			    </div>
+			<form name="contextEntityDetailForm" class="form">
+                <div class="form-group" ng-init="setForm(contextEntityDetailForm)">
+                    <label class="form-label">Name</label>
+                    <div class="form-input">
+                        <input type="text" ng-model="blade.name" required>
+                    </div>
+                </div>
 			</form>
 		</div>
 	</div>
