--- a/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Scripts/common/notification/blade/historyDetailDefault.tpl.html
+++ b/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Scripts/common/notification/blade/historyDetailDefault.tpl.html
@@ -1,12 +1,10 @@
-﻿<div class="blade-content">
+﻿<div class="blade-content __medium-wide">
 	<div class="blade-inner">
-		<div class="inner-block">
-			<div ng-init="blade.isLoading = false">
-			    <div ng-repeat="(key, val) in blade.notify.extendedData">
-			        <div class="sub-t">{{key}}</div>
-			        <p class="text">{{val}}</p>
-			    </div>
-			</div>
+		<div class="inner-block" ng-init="blade.isLoading = false">
+			<div ng-repeat="(key, val) in blade.notify.extendedData">
+		        <div class="sub-t">{{key}}</div>
+		        <p class="text __debug">{{val}}</p>
+		    </div>
 		</div>
 	</div>
 </div>
