--- a/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Scripts/common/notification/menuHeader.tpl.html
+++ b/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Scripts/common/notification/menuHeader.tpl.html
@@ -1,5 +1,5 @@
 ﻿<div class="dropdown-head">
-    <ul class="menu __inline">
+    <!-- <ul class="menu __inline">
         <li class="menu-item">
             <a class="menu-link" ng-click="currentMenuItem.showHistory()">
                 <i class="menu-ico fa fa-history"></i>
@@ -12,5 +12,5 @@
                 <span class="menu-name">Clear all recent</span>
             </a>
         </li>
-    </ul>
+    </ul> -->
 </div>
