--- a/src/Presentation/WebAdmin/Design/index.html
+++ b/src/Presentation/WebAdmin/Design/index.html
@@ -2773,6 +2773,67 @@
                             </div>
                         </div>
                     </div>
+                    <div class="blade">
+                        <header class="blade-head">
+                            <div class="blade-status"></div>
+                            <div class="blade-nav">
+                                <ul class="menu __inline">
+                                    <li class="menu-item __minimize">
+                                        <button>
+                                            Minimize
+                                        </button>
+                                    </li>
+                                    <li class="menu-item __maximize">
+                                        <button>
+                                            Maximize
+                                        </button>
+                                    </li>
+                                    <li class="menu-item __close __disabled">
+                                        <button disabled="disabled">
+                                            Close
+                                        </button>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="blade-t __secondary">
+                                <i class="blade-t_ico fa fa-folder"></i>
+                                <p class="blade-t_head">vasja customer's Customer Order items</p>
+                                <p class="blade-t_subhead">Edit order items</p>
+                            </div>
+                            <div class="blade-toolbar">
+                                <ul class="menu __inline">
+                                    <li class="menu-item ng-scope">
+                                        <button class="menu-btn">
+                                            <i class="menu-ico fa fa-plus"></i>
+                                            Add item
+                                        </button>
+                                    </li>
+                                    <li class="menu-item __loading">
+                                        <button class="menu-btn">
+                                            <i class="menu-ico fa fa-trash-o"></i>
+                                            Remove
+                                        </button>
+                                    </li>
+                                </ul>
+                            </div>
+                        </header>
+                        <div class="blade-container">
+                            <div class="blade-content">
+                                <div class="blade-inner">
+                                    <div class="inner-block">
+                                        <div class="form">
+                                            <button class="btn">
+                                                <span>Default button</span>
+                                            </button>
+                                            <button class="btn __loading">
+                                                <span>Animated button</span>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </article>
         </div>
