Fixes + changes Design

--- a/src/Presentation/WebAdmin/Design/index.html
+++ b/src/Presentation/WebAdmin/Design/index.html
@@ -2834,6 +2834,140 @@
                             </div>
                         </div>
                     </div>
+                    <div class="blade">
+                        <header class="blade-head">
+                            <div class="blade-status"></div>
+                            <div class="blade-nav">
+                                <ul class="menu __inline">
+                                    <li class="menu-item __minimize">
+                                        <button>
+                                            Minimize
+                                        </button>
+                                    </li>
+                                    <li class="menu-item __maximize">
+                                        <button>
+                                            Maximize
+                                        </button>
+                                    </li>
+                                    <li class="menu-item __close __disabled">
+                                        <button disabled="disabled">
+                                            Close
+                                        </button>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="blade-t __secondary">
+                                <i class="blade-t_ico fa fa-folder"></i>
+                                <p class="blade-t_head">vasja customer's Customer Order items</p>
+                                <p class="blade-t_subhead">Edit order items</p>
+                            </div>
+                            <div class="blade-toolbar">
+                                <ul class="menu __inline">
+                                    <li class="menu-item ng-scope">
+                                        <button class="menu-btn">
+                                            <i class="menu-ico fa fa-plus"></i>
+                                            Add item
+                                        </button>
+                                    </li>
+                                    <li class="menu-item __disabled">
+                                        <button class="menu-btn">
+                                            <i class="menu-ico fa fa-trash-o"></i>
+                                            Remove
+                                        </button>
+                                    </li>
+                                </ul>
+                            </div>
+                        </header>
+                        <div class="blade-container">
+                            <div class="blade-content __medium-wide __gray">
+                                <div class="blade-inner">
+                                    <div class="inner-block">
+                                        <div class="form">
+                                            <div class="tile-group four">
+                                                <div class="tile quadro">
+                                                    <div class="tree-view">
+                                                        <div class="tree-scroll">
+                                                            <ul class="tree">
+                                                                <li class="tree-item first">
+                                                                    <div class="tree-block">
+                                                                        <div class="inner">
+                                                                            <div class="tree-el __title">
+                                                                                <i class="tree-ico fa fa-info-circle"></i>
+                                                                                Order #CU04829
+                                                                            </div>
+                                                                            <div class="tree-el __date">
+                                                                                <i class="tree-ico fa fa-calendar"></i>
+                                                                                Feb 17, 2015
+                                                                            </div>
+                                                                            <div class="tree-el __price">
+                                                                                <i class="tree-ico fa fa-money"></i>
+                                                                                218 USD
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                    <ul class="tree-node">
+                                                                        <li class="tree-item">
+                                                                            <div class="tree-block">
+                                                                                <div class="inner">
+                                                                                    <div class="tree-el __title">
+                                                                                        <i class="tree-ico fa fa-info-circle"></i>
+                                                                                        PaymentIn #PA04829
+                                                                                    </div>
+                                                                                    <div class="tree-el __date">
+                                                                                        <i class="tree-ico fa fa-calendar"></i>
+                                                                                        Feb 17, 2015
+                                                                                    </div>
+                                                                                    <div class="tree-el __price">
+                                                                                        <i class="tree-ico fa fa-money"></i>
+                                                                                        10 USD
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                                                                        </li>
+                                                                        <li class="tree-item">
+                                                                            <div class="tree-block">
+                                                                                <div class="inner">
+                                                                                    <div class="tree-el __title">
+                                                                                        <i class="tree-ico fa fa-info-circle"></i>
+                                                                                        Shipment #SH04829
+                                                                                    </div>
+                                                                                    <div class="tree-el __date">
+                                                                                        <i class="tree-ico fa fa-calendar"></i>
+                                                                                        Feb 17, 2015
+                                                                                    </div>
+                                                                                    <div class="tree-el __price">
+                                                                                        <i class="tree-ico fa fa-money"></i>
+                                                                                        0 USD
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                                                                        </li>
+                                                                    </ul>
+                                                                </li>
+                                                            </ul>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="tile __price double wide">
+                                                    <span class="tile-count">300</span>
+                                                    <span class="tile-descr">Proudcts</span>
+                                                    <span class="tile-price">30.30 USD</span>
+                                                </div>
+                                                <div class="tile double wide">
+                                                    <ul class="list __prices">
+                                                        <li class="list-item">Sub total <span class="list-price">678.23</span></li>
+                                                        <li class="list-item">Discount Total <span class="list-price">36.00</span></li>
+                                                        <li class="list-item">Tax total <span class="list-price">0</span></li>
+                                                        <li class="list-item __total">Total <span class="list-price">218</span></li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </article>
         </div>
